[package]
name = "zero2prod"
version = "0.1.0"
authors = ["José Augusto S. de Moura <josemoura212@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
actix-web = "4.5.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.20.2"
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
chrono = "0.4.38"
config = "0.14.0"
htmlescape = "0.3.1"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = {version = "1.37.0",features = ["macros", "rt-multi-thread"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4","serde"] }
validator = "0.14.0"

[dependencies.reqwest]
version = "0.12.4" 
default-features = false
features = [
    "json", 
    "rustls-tls",
    "cookies",
]

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
linkify = "0.10.0"
once_cell = "1.19.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
wiremock = "0.6.0"
